add_subdirectory(in-action/01)
add_subdirectory(in-action/02)
add_subdirectory(in-action/03)
add_subdirectory(in-action/04)
add_subdirectory(in-action/05)
add_subdirectory(in-action/06)
add_subdirectory(in-action/07)
add_subdirectory(in-action/08)
add_subdirectory(in-action/09)
add_subdirectory(in-action/10)
add_subdirectory(in-action/11)
add_subdirectory(in-action/12)
add_subdirectory(in-action/13)
add_subdirectory(in-action/14)
add_subdirectory(in-action/15)
add_subdirectory(in-action/16)
add_subdirectory(in-action/17)
add_subdirectory(in-action/18)
add_subdirectory(in-action/19)
add_subdirectory(in-action/20)
add_subdirectory(workout/01)
add_subdirectory(workout/02)
